[gd_scene load_steps=13 format=3 uid="uid://cjpjipc5dpyxa"]

[ext_resource type="Script" path="res://scenes/levels/tutorial/tutorial2.gd" id="1_35w2r"]
[ext_resource type="PackedScene" uid="uid://ckk03qsadcwlw" path="res://scenes/entities/player/player.tscn" id="2_oa6d5"]
[ext_resource type="PackedScene" uid="uid://5ye6f6br2bts" path="res://scenes/user_interface/user_interface.tscn" id="3_bqkvd"]
[ext_resource type="PackedScene" uid="uid://c8b5k7lep8tea" path="res://scenes/chunks/end_chunk.tscn" id="4_0gl2h"]
[ext_resource type="PackedScene" uid="uid://bsi2sm86hkhor" path="res://scenes/objects/qubit/qubit.tscn" id="5_qxfn2"]
[ext_resource type="PackedScene" uid="uid://65xnlas5jt2i" path="res://scenes/objects/quantum_gate_slot/quantum_gate_slot.tscn" id="6_6xtdj"]
[ext_resource type="PackedScene" uid="uid://o2xud88mln6v" path="res://scenes/objects/door/door.tscn" id="7_j83vu"]
[ext_resource type="PackedScene" uid="uid://e2dv2absvtoc" path="res://scenes/objects/teleporter/teleporter.tscn" id="8_rsetk"]
[ext_resource type="PackedScene" uid="uid://m8321cyvowy5" path="res://scenes/levels/tutorial/tutorial3.tscn" id="10_8hmf6"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_gyik4"]
sky_top_color = Color(0.134281, 0.16838, 0.215799, 1)
sky_horizon_color = Color(0.598989, 0.597969, 0.598742, 1)
ground_bottom_color = Color(0.261676, 0.223495, 0.179171, 1)
ground_horizon_color = Color(0.598989, 0.597969, 0.598742, 1)

[sub_resource type="Sky" id="Sky_4i27a"]
sky_material = SubResource("ProceduralSkyMaterial_gyik4")

[sub_resource type="Environment" id="Environment_hc8un"]
background_mode = 2
sky = SubResource("Sky_4i27a")
tonemap_mode = 2
glow_enabled = true

[node name="Tutorial2" type="Node3D"]
script = ExtResource("1_35w2r")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hc8un")

[node name="Player" parent="." instance=ExtResource("2_oa6d5")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 4, 12)

[node name="UserInterface" parent="." instance=ExtResource("3_bqkvd")]

[node name="World" type="Node3D" parent="."]

[node name="EndChunk" parent="World" instance=ExtResource("4_0gl2h")]

[node name="EndChunk2" parent="World" instance=ExtResource("4_0gl2h")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 28, 0, 16)

[node name="Objects" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 3.5, 8)

[node name="Circuit" type="Node3D" parent="Objects"]

[node name="GoalQubit" parent="Objects/Circuit" instance=ExtResource("5_qxfn2")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -12, 0.5, -4)
visible = false
is_gold = true
initial_state = 1

[node name="InputQubit" parent="Objects/Circuit" node_paths=PackedStringArray("next_slot") instance=ExtResource("5_qxfn2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0.5, 0)
next_slot = NodePath("QuantumGateSlot")

[node name="QuantumGateSlot" parent="Objects/Circuit/InputQubit" node_paths=PackedStringArray("qubit_in") instance=ExtResource("6_6xtdj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)
visible = false
qubit_in = NodePath("..")

[node name="Door" parent="Objects" instance=ExtResource("7_j83vu")]
transform = Transform3D(-1.31134e-07, 0, -3, 0, 3, 0, 3, 0, -1.31134e-07, 1.5, 0.5, 0)

[node name="Teleporter" parent="Objects" instance=ExtResource("8_rsetk")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 10, -0.2, 0)
next_scene = ExtResource("10_8hmf6")
active = true

[node name="Lamp" type="OmniLight3D" parent="Objects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.5, 4)
light_energy = 24.0
omni_range = 24.0
omni_attenuation = 2.0

[node name="Lamp2" type="OmniLight3D" parent="Objects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.5, -4)
light_energy = 24.0
omni_range = 24.0
omni_attenuation = 2.0
